# credxai-utilities-prettyprint

./: .gitignore  README.md  pyproject.toml
src/credxai/utilities/: prettyprint.cfg  prettyprint.py  prettyprint2.py
tests/: test_prettyprint.py
